fix syntaxhighlighter and chrome vertical scrollbar bug.

--- a/static/css/shThemeDefault.css
+++ b/static/css/shThemeDefault.css
@@ -115,3 +115,8 @@
 .syntaxhighlighter .keyword {
   font-weight: bold !important;
 }
+
+/* fix chrome vertical scrollbar bug */
+.syntaxhighlighter table {
+    margin: 1px 0 !important;
+}
